...
                                <constraints>
                                    <constraint firstAttribute="width" constant="166" id="WRU-m3-oc2"/>
                                    <constraint firstAttribute="height" constant="68" id="hDJ-yI-4ET"/>
                                </constraints>
                                <state key="normal" backgroundImage="rectangle" catalog="system">
                                    <attributedString key="attributedTitle">
                                        <fragment content="+/-">
                                            <attributes>
                                                <font key="NSFont" size="26" name="HelveticaNeue"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                    <constraint firstAttribute="width" constant="166" id="Ne6-J9-qSX"/>
                                    <constraint firstAttribute="height" constant="68" id="OnH-iK-hZZ"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="166" id="TqX-F8-xf6"/>
                                </constraints>
                                <state key="normal" backgroundImage="rectangle" catalog="system">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Enter">
                                            <attributes>
                                                <font key="NSFont" size="26" name="HelveticaNeue"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                    <constraint firstAttribute="height" constant="68" id="7Fb-6x-sQl"/>
                                    <constraint firstAttribute="width" constant="91" id="SeI-aB-cUd"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="68" id="us2-Yh-nsY"/>
                                </constraints>
                                <state key="normal" backgroundImage="rectangle" catalog="system">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Eval">
                                            <attributes>
                                                <font key="NSFont" size="18" name="HelveticaNeue"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="67" id="5N8-wL-5bt"/>
                                    <constraint firstAttribute="width" constant="91" id="TX2-Q4-FVk"/>
                                    <constraint firstAttribute="height" constant="67" id="lrM-2W-Ff6"/>
                                </constraints>
                                <state key="normal" backgroundImage="rectangle" catalog="system">
                                    <attributedString key="attributedTitle">
                                        <fragment content="CLR">
                                            <attributes>
                                                <font key="NSFont" size="18" name="HelveticaNeue"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                    <action selector="sevenPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pr0-OX-C4t"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xxn-S2-VC1">
                                <rect key="frame" x="31" y="95" width="363" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="display"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
